fixed layout bug for wall

--- a/viewpanel/static/css/custom.css
+++ b/viewpanel/static/css/custom.css
@@ -10,7 +10,7 @@
 
 #chatbar {
     position: absolute;
-    top: 380;
+    top: 660;
     rows: 3;
     resize: none;
     bottom: 0;
